Try to fix height on mobile

--- a/CVv2/style.css
+++ b/CVv2/style.css
@@ -120,6 +120,7 @@
 
   .containerContent {
     display:flex;
+    position: relative;
     width:100%;
     flex-flow: row wrap;
     height: 355px;
